--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
   "name": "vue-intercept-log",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "webpack",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
+  "keywords": [
+    "log",
+    "console",
+    "vue",
+    "http",
+    "intercept"
+  ],
   "dependencies": {
-    "axios": "^0.21.1",
+    "css-loader": "^5.2.6",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-loader": "^15.9.7",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.2",
-    "vuex": "^3.4.0"
+    "vue-style-loader": "^4.1.3",
+    "vuex": "^3.4.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
@@ -27,6 +38,7 @@
     "@vue/test-utils": "^1.0.3",
     "chai": "^4.1.2",
     "typescript": "~4.1.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-cli": "^4.7.2"
   }
 }
