--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.6",
   "main": "dist/vue-intercept-log.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "start": "node src/devApp/server.js",
     "build": "webpack",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/luojiaqin/vue-intercept-log.git"
   },
   "keywords": [
     "log",
@@ -24,11 +28,14 @@
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.2",
     "vue-style-loader": "^4.1.3",
-    "vuex": "^3.4.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.4",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
@@ -37,9 +44,16 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/test-utils": "^1.0.3",
+    "babel-loader": "^8.2.2",
     "chai": "^4.1.2",
+    "clear": "^0.1.0",
+    "express": "^4.17.1",
+    "express-urlrewrite": "^1.4.0",
+    "html-webpack-plugin": "^4.3.0",
     "typescript": "~4.1.5",
+    "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.11",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-middleware": "^5.0.0"
   }
 }
