--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vue-intercept-log",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/devApp/server.js",
     "build": "webpack",
-    "test:unit": "vue-cli-service test:unit",
+    "test:unit": "node_modules/.bin/mocha tests/unit/*.spec.js",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
@@ -22,14 +22,14 @@
   ],
   "dependencies": {
     "css-loader": "^5.2.6",
+    "jsdom": "^15.2.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-loader": "^15.9.7",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.2",
     "vue-style-loader": "^4.1.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -46,6 +46,7 @@
     "@vue/test-utils": "^1.0.3",
     "babel-loader": "^8.2.2",
     "chai": "^4.1.2",
+    "chai-http": "^4.3.0",
     "clear": "^0.1.0",
     "express": "^4.17.1",
     "express-urlrewrite": "^1.4.0",
@@ -53,7 +54,6 @@
     "typescript": "~4.1.5",
     "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.11",
-    "webpack-cli": "^4.7.2",
     "webpack-dev-middleware": "^5.0.0"
   }
 }
