--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node src/devApp/server.js",
     "build": "webpack",
-    "test:unit": "node_modules/.bin/mocha tests/unit/*.spec.js",
+    "test:unit": "node_modules/.bin/mocha tests/unit/consolePlatform.spec.js",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "test": "karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -23,18 +23,19 @@
   "dependencies": {
     "css-loader": "^5.2.6",
     "jsdom": "^15.2.1",
+    "karma": "^6.3.4",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-loader": "^15.9.7",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.2",
-    "vue-style-loader": "^4.1.3",
-    "webpack": "^4.43.0"
+    "vue-style-loader": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
     "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.4",
@@ -51,9 +52,20 @@
     "express": "^4.17.1",
     "express-urlrewrite": "^1.4.0",
     "html-webpack-plugin": "^4.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage": "^2.0.3",
+    "karma-mocha": "^2.0.1",
+    "karma-requirejs": "^1.1.0",
+    "karma-spec-reporter": "^0.0.32",
+    "karma-webpack": "^4.0.2",
+    "mocha": "^9.0.2",
+    "requirejs": "^2.3.6",
     "typescript": "~4.1.5",
     "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.43.0",
     "webpack-dev-middleware": "^5.0.0"
   }
 }
